--- a/home.html
+++ b/home.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="./dist/build.js"></script>
+    <script src="./dist/about.js"></script>
 </head>
 <body>
 <h1>FFFFFFFFFFFFFFF</h1>
 <h1>FFFFFFFFFFFFFFF</h1>
 <script>
-    home.welcome("something?");
 </script>
 </body>
 </html>
