--- a/home.html
+++ b/home.html
@@ -6,8 +6,7 @@
     <script src="./dist/about.js"></script>
 </head>
 <body>
-<h1>FFFFFFFFFFFFFFF</h1>
-<h1>FFFFFFFFFFFFFFF</h1>
+<h1>ADVANCED REQUIRE</h1>
 <script>
 </script>
 </body>
