--- a/home.html
+++ b/home.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="./dist/about.js"></script>
+    <script src="./dist/app.js"></script>
 </head>
 <body>
-<h1>ADVANCED REQUIRE</h1>
+<button id="loginButton">Login</button>
+
+<button id="logoutButton">Logout</button>
 <script>
 </script>
 </body>
