--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Doom Troopers</title>
 </head>
 <body>
-<h1>Doom Troopers</h1>
-<ul>
-    <li>Troop 1</li>
-    <li>Troop 2</li>
-    <li>Troop 3</li>
-    <li>Troop 4</li>
-    <li>Troop 5</li>
-    <li>Troop 6</li>
-    <li>Troop 7</li>
-    <li>Troop 8</li>
-</ul>
+<div class="container">
+    <h1>Doom Troopers</h1>
+    <ul>
+        <li>Troop 1</li>
+        <li>Troop 2</li>
+        <li>Troop 3</li>
+        <li>Troop 4</li>
+        <li>Troop 5</li>
+        <li>Troop 6</li>
+        <li>Troop 7</li>
+        <li>Troop 8</li>
+    </ul>
+</div>
+
 </body>
 </html>
